<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.rjokela.comparetablets.TabletCompareActivityFragment">

    <LinearLayout
        android:id="@+id/tabletCompare_rowNamesParent"
        android:orientation="vertical"
        android:layout_width="@dimen/tabletCompare_rowNamesWidth"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabletCompare_rowHeight"/>

        <TextView
            android:id="@+id/tabletCompare_rowNameTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabletCompare_rowHeight"
            android:text="@string/tabletCompare_rowNameTitle"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tabletCompare_rowNameOs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabletCompare_rowHeight"
            android:text="@string/tabletCompare_rowNameOs"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tabletCompare_rowNamePrice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabletCompare_rowHeight"
            android:text="@string/tabletCompare_rowNamePrice"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tabletCompare_rowNamePhysicalDimensions"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabletCompare_rowHeight"
            android:text="@string/tabletCompare_rowNamePhysicalDimensions"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tabletCompare_rowNameWeight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabletCompare_rowHeight"
            android:text="@string/tabletCompare_rowNameWeight"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tabletCompare_rowNameScreenSize"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabletCompare_rowHeight"
            android:text="@string/tabletCompare_rowNameScreenSize"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tabletCompare_rowNameResolution"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabletCompare_rowHeight"
            android:text="@string/tabletCompare_rowNameResolution"
            android:gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabletCompare_tabletEntriesParent"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tabletCompare_rowNamesParent">



    </LinearLayout>

</RelativeLayout>
